<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.example.android.singlescreenapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingBottom="32dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/photo"
            android:scaleType="centerCrop"
            android:src="@drawable/photo" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/CompanyName"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="32dp"
                android:text="@string/slogan"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="italic" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageButton
                    style="@style/Icons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/mapicon"
                    android:src="@mipmap/ic_map_black_18dp" />

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageButton
                    style="@style/Icons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phoneicon"
                    android:src="@mipmap/ic_call_black_18dp" />

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageButton
                    style="@style/Icons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/siteicon"
                    android:src="@mipmap/ic_public_black_18dp" />

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageButton
                    style="@style/Icons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/emailicon"
                    android:src="@mipmap/ic_email_black_18dp" />

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/SocialIcons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/facebookicon"
                    android:src="@drawable/ic_facebook_black" />

                <ImageButton
                    style="@style/SocialIcons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/gplusicon"
                    android:src="@drawable/ic_googleplus_black" />

                <ImageButton
                    style="@style/SocialIcons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/instagramicon"
                    android:src="@drawable/ic_instagram_black" />

                <ImageButton
                    style="@style/SocialIcons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/twittericon"
                    android:src="@drawable/ic_twitter_black" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
